# BMSscraper

./: Cargo.toml  config.toml
src/: main.rs  mf.rs  mf_config.rs  string_utils.rs
