[package]
name = "bmsparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
iso8601-duration = "0.1.0"
log = "0.4"
flexi_logger = "0.22.3"